--- a/networkAnalysis.Rmd
+++ b/networkAnalysis.Rmd
@@ -51,20 +51,23 @@ checking top centrality/betweeness
 Between1986<-betweenness(graph1986)
 countryExport1986$between1986<-Between1986
 topBetween<-countryExport1986[with(countryExport1986,order(-between1986)),]
+topBetween
 closeness1986<-closeness(graph1986)
 countryExport1986$closeness1986<-closeness1986
 topCloseness<-countryExport1986[with(countryExport1986,order(-closeness1986)),]
+topCloseness
 plot(countryExport1986$between1986,countryExport1986$totalExport)
-cor(countryExport1986$between1986,countryExport1986$totalExport)
 cor.test(countryExport1986$between1986,countryExport1986$totalExport)
 ```
 ```{r}
 Between1996<-betweenness(graph1996)
 countryExport1996$between1996<-Between1996
 topBetween1996<-countryExport1996[with(countryExport1996,order(-between1996)),]
+topBetween1996
 closeness1996<-closeness(graph1996)
 countryExport1996$closeness1996<-closeness1996
 topCloseness<-countryExport1996[with(countryExport1996,order(-closeness1996)),]
+
 plot(countryExport1996$between1996,countryExport1996$totalExport)
 cor(countryExport1996$between1996,countryExport1996$totalExport)
 cor.test(countryExport1996$between1996,countryExport1996$totalExport)
