--- a/networkAnalysis.Rmd
+++ b/networkAnalysis.Rmd
@@ -37,6 +37,17 @@ g06$totalExport<-totalExport06
 g16$totalExport<-totalExport16
 
 ```
+```{r}
+dense86<-graph.density(g86)
+dense96<-graph.density(g96)
+dense06<-graph.density(g06)
+dense16<-graph.density(g16)
+degreeDensity<-data.frame(average=c(dense86,dense96,dense06,dense16),year=c("1986","1996","2006","2016"))
+library(ggplot2)
+ggplot(data=degreeDensity,aes(x=year,y=average)) +
+  geom_bar(stat="identity") + ggtitle("Degree density over four decades")
+
+```
 
 ```{r}
 between86<-betweenness(g86)
@@ -66,7 +77,7 @@ x4<-mean(unname(between16))
 averageBetween<-data.frame(average=c(x1,x2,x3,x4),year=c("1986","1996","2006","2016"))
 ```
 ```{r}
-library(ggplot2)
+
 ggplot(data=averageBetween,aes(x=year,y=average)) +
   geom_bar(stat="identity") + ggtitle("Average betweenness over four decades")
 ```
